--- a/BIM/src/main/resources/com/mycompany/bim/logIn.fxml
+++ b/BIM/src/main/resources/com/mycompany/bim/logIn.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="paneLogIn" prefHeight="750.0" prefWidth="1350.0" stylesheets="@../../../css/logIn.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LogInController">
+<AnchorPane id="paneLogIn" prefHeight="750.0" prefWidth="1350.0" stylesheets="@../../../css/logIn.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LogInController">
    <children>
       <AnchorPane id="paneSingIn" fx:id="paneSingIn" layoutX="524.0" layoutY="251.0" prefHeight="230.0" prefWidth="310.0">
          <children>
@@ -24,7 +24,7 @@
                <font>
                   <Font size="14.0" />
                </font></Label>
-            <Button fx:id="btnSingIn" layoutX="36.0" layoutY="174.0" mnemonicParsing="false" onAction="#clickSigIn" prefHeight="25.0" prefWidth="238.0" text="Sing in" textFill="WHITE">
+            <Button fx:id="btnSingIn" layoutX="36.0" layoutY="174.0" mnemonicParsing="false" onAction="#clickSigIn" prefHeight="25.0" prefWidth="238.0" text="Sign in" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font></Button>
@@ -51,7 +51,7 @@
                </font></Label>
          </children>
       </AnchorPane>
-      <Label layoutX="624.0" layoutY="203.0" prefHeight="22.0" prefWidth="108.0" text="Sing in to BIM" textFill="WHITE">
+      <Label layoutX="624.0" layoutY="203.0" prefHeight="22.0" prefWidth="108.0" text="Sign in to BIM" textFill="WHITE">
          <font>
             <Font name="System Bold" size="15.0" />
          </font></Label>
