--- a/BIM/src/main/resources/com/mycompany/bim/administrator.fxml
+++ b/BIM/src/main/resources/com/mycompany/bim/administrator.fxml
@@ -184,7 +184,7 @@
             <Button fx:id="btnSearchUser" layoutX="532.0" layoutY="126.0" mnemonicParsing="false" onAction="#clickSearchUser" prefHeight="40.0" prefWidth="70.0" styleClass="buttonBlue" text="Search" />
          </children>
       </AnchorPane>
-      <AnchorPane id="paneTertiary" fx:id="paneProyects" disable="true" layoutX="42.0" layoutY="31.0" prefHeight="711.0" prefWidth="1295.0" stylesheets="@../../../css/administrator.css" visible="false">
+      <AnchorPane id="paneTertiary" fx:id="paneProyects" layoutX="42.0" layoutY="31.0" prefHeight="711.0" prefWidth="1295.0" stylesheets="@../../../css/administrator.css">
          <children>
             <TextField fx:id="txtDesignerID" layoutX="432.0" layoutY="413.0" prefHeight="40.0" prefWidth="200.0" />
             <Label fx:id="lblProyectCode" layoutX="244.0" layoutY="152.0" prefHeight="27.0" prefWidth="202.0" text="Search Proyect By Code" textFill="WHITE">
@@ -220,9 +220,10 @@
             <Button fx:id="btnModifyProyect" disable="true" layoutX="150.0" layoutY="635.0" mnemonicParsing="false" onAction="#clickModifyProyect" prefHeight="45.0" prefWidth="410.0" styleClass="buttonBlue" text="Modify" visible="false" />
             <Button fx:id="btnDeleteProyect" disable="true" layoutX="150.0" layoutY="635.0" mnemonicParsing="false" onAction="#clcikDeleteProyect" prefHeight="45.0" prefWidth="410.0" styleClass="buttonBlue" text="Delete" visible="false" />
             <Button fx:id="btnSwitchTables" layoutX="1199.0" layoutY="14.0" mnemonicParsing="false" onAction="#clickSwitchTables" text="-&gt;" />
+            <Button fx:id="btnSearchProyect" layoutX="458.0" layoutY="194.0" mnemonicParsing="false" onAction="#clickSearchProyect" text="Search" />
          </children>
       </AnchorPane>
-      <AnchorPane id="paneUserHome" fx:id="paneHome" layoutX="22.0" layoutY="31.0" prefHeight="708.0" prefWidth="1314.0" stylesheets="@../../../css/administrator.css">
+      <AnchorPane id="paneUserHome" fx:id="paneHome" disable="true" layoutX="22.0" layoutY="31.0" prefHeight="708.0" prefWidth="1314.0" stylesheets="@../../../css/administrator.css" visible="false">
          <children>
             <Label layoutX="113.0" layoutY="228.0" prefHeight="80.0" prefWidth="1035.0" text="Algo como bienvenido admin " textFill="WHITE">
                <font>
@@ -233,7 +234,7 @@
                   <Font size="38.0" />
                </font>
             </Label>
-            <TableView fx:id="tblvProyects" layoutX="757.0" layoutY="50.0" prefHeight="645.0" prefWidth="525.0">
+            <TableView fx:id="tblvProyects" layoutX="757.0" layoutY="50.0" onMouseClicked="#clickGetProyectCode" prefHeight="645.0" prefWidth="525.0">
               <columns>
                 <TableColumn fx:id="columProyect" prefWidth="143.0" text="Proyect" />
                 <TableColumn fx:id="columCode" minWidth="0.0" prefWidth="126.0" text="Code" />
